--- a/buildspec-deploy.yml
+++ b/buildspec-deploy.yml
@@ -9,8 +9,7 @@ phases:
         - npm install -g yarn
         - pip3 install --upgrade pip
         - pip3 install --upgrade awscli
-        - apt install jq wget -y
-        - wget https://github.com/mikefarah/yq/releases/download/v4.10.0/yq_linux_amd64 -O /usr/bin/yq && chmod +x /usr/bin/yq
+        - apt install jq -y
     build:
       commands:
         - ls -al
@@ -22,9 +21,8 @@ phases:
         - echo "POOL_DOMAIN= $POOL_DOMAIN"
         - (cd fhirworks/fhir-works-on-aws-deployment/scripts && ./install.sh --silentInstall "yes" --stage "$STAGE_NAME" --stagetype "$STAGE_TYPE" --region "$REGION" --pool "$POOL" --poolclient "$POOL_CLIENT" --pooldomain "$POOL_DOMAIN" --multiTenancyStrategy "UrlBased" --multiTenancyTokenClaim "cognito:groups" --corsOrigins "ALL_ORIGINS" --useApiKeys "no" --multiTenancyTokenClaimValuePrefix "quentry:")
         - cat "fhirworks/fhir-works-on-aws-deployment/Info_Output.yml"
-        - SERVICE_ENDPOINT=$(yq e ".ServiceEndpoint" "fhirworks/fhir-works-on-aws-deployment/Info_Output.yml") && echo "SERVICE_ENDPOINT= $SERVICE_ENDPOINT"
         - |
-          echo "{ \"ServiceEndpoint\": \"$SERVICE_ENDPOINT\" }" > fw-deploy-output.json
+          echo "{ \"ServiceEndpoint\": \"$(grep 'ServiceEndpoint: ' fhirworks/fhir-works-on-aws-deployment/Info_Output.yml | sed 's/^.*: //')\" }" > fw-deploy-output.json
 artifacts:
   files:
     - fhirworks/fhir-works-on-aws-deployment/Info_Output.yml
