--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "aws-sdk": "^2.785.0",
     "axios": "^0.21.1",
     "fhir-works-on-aws-authz-rbac": "4.1.1",
-    "fhir-works-on-aws-interface": "9.0.0",
-    "fhir-works-on-aws-persistence-ddb": "3.3.4",
-    "fhir-works-on-aws-routing": "5.4.1",
-    "fhir-works-on-aws-search-es": "2.6.1",
+    "fhir-works-on-aws-interface": "link:../fhir-works-on-aws-interface",
+    "fhir-works-on-aws-persistence-ddb": "link:../fhir-works-on-aws-persistence-ddb",
+    "fhir-works-on-aws-routing": "link:../fhir-works-on-aws-routing",
+    "fhir-works-on-aws-search-es": "link:../fhir-works-on-aws-search-es",
     "serverless-http": "^2.3.1",
     "yargs": "^16.2.0"
   },
@@ -69,6 +69,7 @@
     "serverless": "2.29.0",
     "serverless-bundle": "4.0.1",
     "serverless-offline": "^5.12.1",
+    "serverless-plugin-ifelse": "^1.0.7",
     "serverless-step-functions": "^2.27.1",
     "sinon": "^9.0.2",
     "tmp-promise": "^3.0.2",
