Fixed root path for multi teanancy to support bundle transactions

--- a/serverless.yaml
+++ b/serverless.yaml
@@ -27,6 +27,7 @@ custom:
           - resources.extensions.ApiGatewayMethodMetadataGet
           - resources.extensions.ApiGatewayMethodTenantTenantidVarMetadataGet
         Set:
+          functions.fhirServer.events.0.http.path: '/{tenantId}/' 
           functions.fhirServer.events.1.http.path: '/{tenantId}/{proxy+}' 
           functions.fhirServer.events.2.http.path: /{tenantId}/metadata
         ElseExclude:
@@ -37,6 +38,7 @@ custom:
           - resources.extensions.ApiGatewayMethodMetadataGet
           - resources.extensions.ApiGatewayMethodTenantidVarMetadataGet
         Set:
+          functions.fhirServer.events.0.http.path: '/tenant/{tenantId}/' 
           functions.fhirServer.events.1.http.path: '/tenant/{tenantId}/{proxy+}' 
           functions.fhirServer.events.2.http.path: /tenant/{tenantId}/metadata
         ElseExclude:
