--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "dependencies": {
     "aws-sdk": "^2.785.0",
     "axios": "^0.21.1",
-    "fhir-works-on-aws-authz-rbac": "4.1.1",
+    "fhir-works-on-aws-authz-rbac": "link:../fhir-works-on-aws-authz-rbac",
     "fhir-works-on-aws-interface": "link:../fhir-works-on-aws-interface",
     "fhir-works-on-aws-persistence-ddb": "link:../fhir-works-on-aws-persistence-ddb",
     "fhir-works-on-aws-routing": "link:../fhir-works-on-aws-routing",
