Test with adding extra scope

--- a/serverless.yaml
+++ b/serverless.yaml
@@ -26,12 +26,18 @@ custom:
   multiTenancyTokenClaimValuePrefix: ${opt:multiTenancyTokenClaimValuePrefix, ""}
   corsOrigins: ${opt:corsOrigins, ""}
   useApiKeys: ${opt:useApiKeys, "true"}
+  extraAccessScope: "cdh/m2m"
   # serverlessIfElse: Helps to configure the API Gateway in order to support multi tenancy cleanly
   serverlessIfElse:
       #- IF: '"${self:custom.useMultiTenancy}" == "false"'
       #  Exclude:
       #    - resources.extensions.ApiGatewayMethodTenantidVarMetadataGet
       #    - resources.extensions.ApiGatewayMethodTenantTenantidVarMetadataGet
+
+      - If: '"${self:custom.extraAccessScope}" != ""'
+        Set:
+          functions.fhirServer.events.0.http.authorizer.scopes.3: "${self:custom.extraAccessScope}"
+          functions.fhirServer.events.1.http.authorizer.scopes.3: "${self:custom.extraAccessScope}"
 
       - If: '"${self:custom.useMultiTenancy}" == "true" && "${self:custom.useMultiTenancyTenantSubUrl}" == "false"'
         Exclude:
