--- a/serverless.yaml
+++ b/serverless.yaml
@@ -34,6 +34,7 @@ custom:
       #    - resources.extensions.ApiGatewayMethodTenantidVarMetadataGet
       #    - resources.extensions.ApiGatewayMethodTenantTenantidVarMetadataGet
 
+      # If multiTenancyAllTenantsScope is defined, add it to the api gateway to allow passthrough
       - If: '"${self:custom.multiTenancyAllTenantsScope}" != ""'
         Set:
           functions.fhirServer.events.0.http.authorizer.scopes.3: "${self:custom.multiTenancyAllTenantsScope}"
