Update vars to be consistent with CDHTest project. Next try on the Service endpoint

--- a/buildspec-deploy.yml
+++ b/buildspec-deploy.yml
@@ -14,15 +14,16 @@ phases:
       commands:
         - ls -al
         - tar -xzf fhirworks.tgz
-        - POOL=$CloudDataHubUserPoolId && echo "POOL=$POOL"
-        - POOL_CLIENT=$CloudDataHubUserPoolClientId && echo "POOL_CLIENT=$POOL_CLIENT"
+        - POOL_ID=$CloudDataHubUserPoolId && echo "POOL_ID=$POOL_ID"
+        - CLIENT_ID=$CloudDataHubUserPoolClientId && echo "CLIENT_ID=$CLIENT_ID"
         - echo "POOL_DOMAIN=$POOL_DOMAIN"
         - echo "STAGE_NAME=$STAGE_NAME"
         - echo "STAGE_TYPE=$STAGE_TYPE"
         - echo "REGION=$REGION"
         - echo "ALL_TENANTS_SCOPE=$ALL_TENANTS_SCOPE"
-        - (cd fhirworks/fhir-works-on-aws-deployment/scripts && ./install.sh --silentInstall "yes" --stage "$STAGE_NAME" --stagetype "$STAGE_TYPE" --region "$REGION" --pool "$POOL" --poolclient "$POOL_CLIENT" --pooldomain "$POOL_DOMAIN" --multiTenancyEnabled --multiTenancyTokenClaim "cognito:groups" --corsOrigins "ALL_ORIGINS" --useApiKeys "no" --multiTenancyTokenClaimValuePrefix "quentry:" --multiTenancyAllTenantsScope "$ALL_TENANTS_SCOPE")
+        - (cd fhirworks/fhir-works-on-aws-deployment/scripts && ./install.sh --silentInstall "yes" --stage "$STAGE_NAME" --stagetype "$STAGE_TYPE" --region "$REGION" --pool "$POOL_ID" --poolclient "$CLIENT_ID" --pooldomain "$POOL_DOMAIN" --multiTenancyEnabled --multiTenancyTokenClaim "cognito:groups" --corsOrigins "ALL_ORIGINS" --useApiKeys "no" --multiTenancyTokenClaimValuePrefix "quentry:" --multiTenancyAllTenantsScope "$ALL_TENANTS_SCOPE")
         - cat "fhirworks/fhir-works-on-aws-deployment/Info_Output.yml"
+        - SERVICE_ENDPOINT=$(grep 'ServiceEndpoint: ' fhirworks/fhir-works-on-aws-deployment/Info_Output.yml | sed 's/^.*: //') && echo "SERVICE_ENDPOINT=$SERVICE_ENDPOINT"
         # - aws ssm put-parameter --name "$STAGE_NAME-fhirworks-url" --value "$(grep 'ServiceEndpoint: ' fhirworks/fhir-works-on-aws-deployment/Info_Output.yml | sed 's/^.*: //')" --type "String" --overwrite
         - |
           echo "{ \"ServiceEndpoint\": \"$(grep 'ServiceEndpoint: ' fhirworks/fhir-works-on-aws-deployment/Info_Output.yml | sed 's/^.*: //')\" }" > fw-deploy-output.json
