--- a/serverless.yaml
+++ b/serverless.yaml
@@ -332,6 +332,9 @@ resources:
         UpdateReplacePolicy: Delete
         Properties:
           TableName: '${self:custom.resourceTableName}'
+          ProvisionedThroughput:
+            ReadCapacityUnits: "30"
+            WriteCapacityUnits: "30"
           AttributeDefinitions:
             - AttributeName: id
               AttributeType: S
@@ -358,9 +361,6 @@ resources:
               - Key: 'service'
                 Value: 'fhir'
             - !Ref AWS::NoValue
-          ProvisionedThroughput:
-            ReadCapacityUnits: 30
-            WriteCapacityUnits: 30
       ExportRequestDynamoDBTable:
         Metadata:
           cfn_nag:
